# COMP371_all

COMP371_RaytracerBase/: CMakeLists.txt
COMP371_RaytracerBase/code/: CMakeLists.txt  main.cpp
COMP371_RaytracerBase/code/assets/: cornell_box.json  cornell_box.ppm  cornell_box1.json  cornell_box_empty_pl.json  cornell_box_empty_pl_di.ppm  cornell_box_empty_pl_gi.ppm  cornell_box_gl_al_1.ppm  cornell_box_gl_pl_1.ppm  test2.json  test_area_light1.json  test_area_light1.ppm  test_scene1.json  test_scene1B.json  test_scene2.json  test_scene3.json  test_scene3B.json
COMP371_RaytracerBase/code/src/: Camera.cpp  Camera.h  Geometry.h  Kernel.h  Light.cpp  Light.h  LightIntegrator.h  Output.h  README.txt  Ray.cpp  Ray.h  Ray.hpp  RayTracer.cpp  RayTracer.h  Rectangle.cpp  Rectangle.h  Shape.cpp  Shape.h  Sphere.cpp  Sphere.h  jsonutils.h
LabCapsule5/texture/: CMakeLists.txt  texture_mapping.cpp
Lab_capsules/capsule1/code/: CMakeLists.txt  capsule01.cpp
Lab_capsules/capsule2/code/: CMakeLists.txt  capsule02.cpp  lab02.cpp
Lab_capsules/capsule3/: CMakeLists.txt
Lab_capsules/capsule3/src/: GLUtils.cpp  ObjModel2.cpp  ObjParser.cpp  RenderModel.cpp  RenderModel.h  TCamera.cpp  TOGLWindow.cpp  TTrackBall.cpp  Text.h  Virtual3DLayer.cpp  main.cpp
Lab_capsules/capsule4/: CMakeLists.txt  README.md
Lab_capsules/capsule4/src/: Shader.cpp
Lab_capsules/capsule5/cubemap/: CMakeLists.txt
Labs/Lab01/code/: CMakeLists.txt  README.txt  lab01.cpp
Labs/Lab01s/code/: CMakeLists.txt  lab01s.cpp
Labs/Lab02s/code/: CMakeLists.txt  lab02s.cpp
Labs/Lab03/assets/: Line.fragmentshader  Phong.fragmentshader.glsl  Phong.vertexshader.glsl
Labs/Lab03/src/: ObjModel2.cpp  ObjParser.cpp  RenderModel.cpp  TCamera.cpp  TOGLWindow.h  TTuple.cpp
Labs/Lab03/src/TKernel/: README.txt
Labs/Lab03s/assets/: Line.vertexshader
Labs/Lab03s/src/: GLUtils.h  ObjModel.cpp  ObjModel.h  RenderModel.h  TOGLApp.h  TOGLWindow.cpp  TTrackBall.cpp  TTrackBall.h  TTuple.h  Virtual3DLayer.h
Labs/Lab03s/src/TKernel/: README.txt~  TTuple.h
